--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   ],
   "repository": "arthurvr/is-set",
   "scripts": {
-    "test": "node test/test.js"
+    "test": "node test.js"
   },
   "devDependencies": {
-    "ava": "^0.0.4"
+    "ava": "0.0.4"
   },
   "engines": {
     "node": ">=0.12.0"
