--- a/.github/workflows/node-iojs.yml
+++ b/.github/workflows/node-iojs.yml
@@ -26,6 +26,7 @@ jobs:
         command:
           - 'tests-only'
           - 'tests:shims'
+          - 'tests:corejs'
 
     steps:
       - uses: actions/checkout@v2
@@ -49,6 +50,7 @@ jobs:
         command:
           - 'tests-only'
           - 'tests:shims'
+          - 'tests:corejs'
 
     steps:
       - uses: actions/checkout@v2
