--- a/.github/workflows/node-zero.yml
+++ b/.github/workflows/node-zero.yml
@@ -26,6 +26,7 @@ jobs:
         command:
           - 'tests-only'
           - 'tests:shims'
+          - 'tests:corejs'
 
     steps:
       - uses: actions/checkout@v2
@@ -50,6 +51,7 @@ jobs:
         command:
           - 'tests-only'
           - 'tests:shims'
+          - 'tests:corejs'
 
     steps:
       - uses: actions/checkout@v2
