--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "2.0.2",
 	"description": "Is this value a JS Set? This module works cross-realm/iframe, and despite ES6 @@toStringTag.",
 	"main": "index.js",
+	"sideEffects": false,
 	"scripts": {
 		"version": "auto-changelog && git add CHANGELOG.md",
 		"postversion": "auto-changelog && git add CHANGELOG.md && git commit --no-edit --amend && git tag -f \"v$(node -e \"console.log(require('./package.json').version)\")\"",
