--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"tests:shims": "nyc tape --require=es5-shim --require=es5-shim 'test/**/*.js'",
 		"tests:corejs": "nyc tape --require=core-js 'test/**/*.js'",
 		"test": "npm run tests-only && npm run tests:shims && npm run tests:corejs",
-		"posttest": "npx aud --production"
+		"posttest": "npx npm@\">= 10.2\" audit --production"
 	},
 	"repository": {
 		"type": "git",
@@ -45,7 +45,6 @@
 		"@types/for-each": "^0.3.3",
 		"@types/object-inspect": "^1.8.4",
 		"@types/tape": "^5.6.4",
-		"aud": "^2.0.4",
 		"auto-changelog": "^2.4.0",
 		"core-js": "^2.6.12",
 		"es5-shim": "^4.6.7",
