--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"@types/tape": "^5.8.0",
 		"auto-changelog": "^2.5.0",
 		"core-js": "^2.6.12",
+		"encoding": "^0.1.13",
 		"es5-shim": "^4.6.7",
 		"es6-shim": "^0.35.8",
 		"eslint": "=8.8.0",
